overlays/production/ops/haproxy-ingress-patch.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: haproxy-ingress
  namespace: jitsi
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"  
spec:
  tls:
  - hosts:
    - connectlane.co.in
    secretName: connectlane.co.in-tls
  rules:
    - host: connectlane.co.in
      http:
        paths:
        - path: /
          backend:
            serviceName: haproxy
            servicePort: 80
